{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 191,
  "lineage": "fa96da12-2a23-ddff-2b43-c349524c32f3",
  "resources": [
    {
      "module": "module.azure_vm[\"0\"]",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "existing_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6e47c803-d4a0-49b2-9b1f-01500ce57b80/resourceGroups/my-rg/providers/Microsoft.Network/networkSecurityGroups/linux-nsg-01",
            "location": "uaenorth",
            "name": "linux-nsg-01",
            "resource_group_name": "my-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.azure_vm[\"0\"]",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/6e47c803-d4a0-49b2-9b1f-01500ce57b80/resourceGroups/my-rg/providers/Microsoft.Network/virtualNetworks/linux-vnet-01/subnets/subnet-01",
            "name": "subnet-01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my-rg",
            "virtual_network_name": "linux-vnet-01"
          }
        }
      ]
    },
    {
      "module": "module.azure_vm[\"0\"]",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "8b02a0b5-53b0-4aa7-9186-8c50c82333e0",
            "id": "/subscriptions/6e47c803-d4a0-49b2-9b1f-01500ce57b80/resourceGroups/my-rg/providers/Microsoft.Network/virtualNetworks/linux-vnet-01",
            "location": "uaenorth",
            "name": "linux-vnet-01",
            "resource_group_name": "my-rg",
            "subnets": [
              "subnet-01"
            ]
          }
        }
      ]
    },
    {
      "module": "module.azure_vm[\"0\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/6e47c803-d4a0-49b2-9b1f-01500ce57b80/resourceGroups/my-rg/providers/Microsoft.Network/networkInterfaces/windows-vm-01-nic",
            "internal_domain_name_suffix": "wwqafc3qkotuvemgrrimqizt2a.dxbx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "windows-vm-01-1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6e47c803-d4a0-49b2-9b1f-01500ce57b80/resourceGroups/my-rg/providers/Microsoft.Network/virtualNetworks/linux-vnet-01/subnets/subnet-01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uaenorth",
            "name": "windows-vm-01-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "my-rg"
          },
          "dependencies": [
            "module.azure_vm.azurerm_public_ip.vm_public_ip",
            "module.azure_vm.data.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vm[\"0\"]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6e47c803-d4a0-49b2-9b1f-01500ce57b80/resourceGroups/my-rg/providers/Microsoft.Network/networkInterfaces/windows-vm-01-nic|/subscriptions/6e47c803-d4a0-49b2-9b1f-01500ce57b80/resourceGroups/my-rg/providers/Microsoft.Network/networkSecurityGroups/linux-nsg-01",
            "network_interface_id": "/subscriptions/6e47c803-d4a0-49b2-9b1f-01500ce57b80/resourceGroups/my-rg/providers/Microsoft.Network/networkInterfaces/windows-vm-01-nic",
            "network_security_group_id": "/subscriptions/6e47c803-d4a0-49b2-9b1f-01500ce57b80/resourceGroups/my-rg/providers/Microsoft.Network/networkSecurityGroups/linux-nsg-01"
          },
          "dependencies": [
            "module.azure_vm.azurerm_network_interface.vm_nic",
            "module.azure_vm.azurerm_public_ip.vm_public_ip",
            "module.azure_vm.data.azurerm_network_security_group.existing_nsg",
            "module.azure_vm.data.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vm[\"0\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inbound_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.azure_vm[\"0\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    }
  ]
}